--- a/projeto_pandas.ipynb
+++ b/projeto_pandas.ipynb
@@ -9918,7 +9918,9 @@
    "id": "b98af60b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "teste"
+   ]
   }
  ],
  "metadata": {
