minor fix to document structure

--- a/projeto_pandas.ipynb
+++ b/projeto_pandas.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "36ecf009",
    "metadata": {},
    "outputs": [
@@ -291,9 +291,6 @@
        "      <th>50%</th>\n",
        "      <th>75%</th>\n",
        "      <th>max</th>\n",
-       "      <th>IQR</th>\n",
-       "      <th>minimun_wo_outlier</th>\n",
-       "      <th>maximun_wo_outlier</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -307,9 +304,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.5</td>\n",
-       "      <td>2.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Washing Machine</th>\n",
@@ -321,9 +315,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.5</td>\n",
-       "      <td>2.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Airconditioner</th>\n",
@@ -335,9 +326,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Car, Jeep, Van</th>\n",
@@ -349,9 +337,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Landline/wireless telephones</th>\n",
@@ -363,9 +348,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Cellular phone</th>\n",
@@ -377,9 +359,6 @@
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>10.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Personal Computer</th>\n",
@@ -391,9 +370,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Stove with Oven/Gas Range</th>\n",
@@ -405,9 +381,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Motorized Banca</th>\n",
@@ -419,9 +392,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Number of Motorcycle/Tricycle</th>\n",
@@ -433,9 +403,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -454,32 +421,20 @@
        "Number of Motorized Banca               41544.0  0.013119  0.127171  0.0  0.0   \n",
        "Number of Motorcycle/Tricycle           41544.0  0.289885  0.558408  0.0  0.0   \n",
        "\n",
-       "                                        50%  75%   max  IQR  \\\n",
-       "Number of Refrigerator/Freezer          0.0  1.0   5.0  1.0   \n",
-       "Number of Washing Machine               0.0  1.0   3.0  1.0   \n",
-       "Number of Airconditioner                0.0  0.0   5.0  0.0   \n",
-       "Number of Car, Jeep, Van                0.0  0.0   5.0  0.0   \n",
-       "Number of Landline/wireless telephones  0.0  0.0   4.0  0.0   \n",
-       "Number of Cellular phone                2.0  3.0  10.0  2.0   \n",
-       "Number of Personal Computer             0.0  0.0   6.0  0.0   \n",
-       "Number of Stove with Oven/Gas Range     0.0  0.0   3.0  0.0   \n",
-       "Number of Motorized Banca               0.0  0.0   3.0  0.0   \n",
-       "Number of Motorcycle/Tricycle           0.0  0.0   5.0  0.0   \n",
-       "\n",
-       "                                        minimun_wo_outlier  maximun_wo_outlier  \n",
-       "Number of Refrigerator/Freezer                        -1.5                 2.5  \n",
-       "Number of Washing Machine                             -1.5                 2.5  \n",
-       "Number of Airconditioner                               0.0                 0.0  \n",
-       "Number of Car, Jeep, Van                               0.0                 0.0  \n",
-       "Number of Landline/wireless telephones                 0.0                 0.0  \n",
-       "Number of Cellular phone                              -2.0                 6.0  \n",
-       "Number of Personal Computer                            0.0                 0.0  \n",
-       "Number of Stove with Oven/Gas Range                    0.0                 0.0  \n",
-       "Number of Motorized Banca                              0.0                 0.0  \n",
-       "Number of Motorcycle/Tricycle                          0.0                 0.0  "
+       "                                        50%  75%   max  \n",
+       "Number of Refrigerator/Freezer          0.0  1.0   5.0  \n",
+       "Number of Washing Machine               0.0  1.0   3.0  \n",
+       "Number of Airconditioner                0.0  0.0   5.0  \n",
+       "Number of Car, Jeep, Van                0.0  0.0   5.0  \n",
+       "Number of Landline/wireless telephones  0.0  0.0   4.0  \n",
+       "Number of Cellular phone                2.0  3.0  10.0  \n",
+       "Number of Personal Computer             0.0  0.0   6.0  \n",
+       "Number of Stove with Oven/Gas Range     0.0  0.0   3.0  \n",
+       "Number of Motorized Banca               0.0  0.0   3.0  \n",
+       "Number of Motorcycle/Tricycle           0.0  0.0   5.0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "ae487090",
    "metadata": {},
    "outputs": [
@@ -1027,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "13ea0291",
    "metadata": {},
    "outputs": [
@@ -1248,7 +1203,7 @@
        "Number of Motorcycle/Tricycle                          0.0                 0.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "b59f1562",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1325,7 @@
        "Number of Motorcycle/Tricycle        0.0  0.0  0.0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "21a20427",
    "metadata": {},
    "outputs": [
@@ -1490,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "f3e6177e",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1556,7 @@
        "Total number of family members employed   0.0   1.0   2.0   5.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2fc8ca6b",
    "metadata": {},
    "outputs": [
@@ -1723,7 +1678,7 @@
        "Total number of family members employed   0.0   1.0   2.0   5.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "b69e351a",
    "metadata": {},
    "outputs": [],
@@ -1752,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "bb6e7471",
    "metadata": {},
    "outputs": [],
@@ -1762,13 +1717,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "60154f25",
    "metadata": {},
    "outputs": [],
    "source": [
     "for col in qualitative_df.columns:\n",
     "    temp_df = qualitative_df[col].value_counts().to_frame()\n",
+    "    temp_df['Freq. Abs. Ac.'] = temp_df[col].cumsum()\n",
     "    temp_df['Freq. Rel.'] = temp_df[col] / temp_df[col].sum()\n",
     "    temp_df['Freq. Rel(%)'] = temp_df['Freq. Rel.'] * 100\n",
     "    temp_df['Freq. Rel. Ac.'] = temp_df['Freq. Rel(%)'].cumsum()\n",
@@ -1777,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b956f329",
    "metadata": {},
    "outputs": [
@@ -1790,7 +1746,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1801,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "55cbe3f8",
    "metadata": {},
    "outputs": [
@@ -1827,6 +1783,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Type of Walls</th>\n",
+       "      <th>Freq. Abs. Ac.</th>\n",
        "      <th>Freq. Rel.</th>\n",
        "      <th>Freq. Rel(%)</th>\n",
        "      <th>Freq. Rel. Ac.</th>\n",
@@ -1836,6 +1793,7 @@
        "    <tr>\n",
        "      <th>Strong</th>\n",
        "      <td>27739</td>\n",
+       "      <td>27739</td>\n",
        "      <td>0.667702</td>\n",
        "      <td>66.770171</td>\n",
        "      <td>66.770171</td>\n",
@@ -1843,6 +1801,7 @@
        "    <tr>\n",
        "      <th>Light</th>\n",
        "      <td>8267</td>\n",
+       "      <td>36006</td>\n",
        "      <td>0.198994</td>\n",
        "      <td>19.899384</td>\n",
        "      <td>86.669555</td>\n",
@@ -1850,6 +1809,7 @@
        "    <tr>\n",
        "      <th>Quite Strong</th>\n",
        "      <td>3487</td>\n",
+       "      <td>39493</td>\n",
        "      <td>0.083935</td>\n",
        "      <td>8.393510</td>\n",
        "      <td>95.063066</td>\n",
@@ -1857,6 +1817,7 @@
        "    <tr>\n",
        "      <th>Very Light</th>\n",
        "      <td>1583</td>\n",
+       "      <td>41076</td>\n",
        "      <td>0.038104</td>\n",
        "      <td>3.810418</td>\n",
        "      <td>98.873484</td>\n",
@@ -1864,6 +1825,7 @@
        "    <tr>\n",
        "      <th>Salvaged</th>\n",
        "      <td>456</td>\n",
+       "      <td>41532</td>\n",
        "      <td>0.010976</td>\n",
        "      <td>1.097631</td>\n",
        "      <td>99.971115</td>\n",
@@ -1871,6 +1833,7 @@
        "    <tr>\n",
        "      <th>NOt applicable</th>\n",
        "      <td>12</td>\n",
+       "      <td>41544</td>\n",
        "      <td>0.000289</td>\n",
        "      <td>0.028885</td>\n",
        "      <td>100.000000</td>\n",
@@ -1880,16 +1843,24 @@
        "</div>"
       ],
       "text/plain": [
-       "                Type of Walls  Freq. Rel.  Freq. Rel(%)  Freq. Rel. Ac.\n",
-       "Strong                  27739    0.667702     66.770171       66.770171\n",
-       "Light                    8267    0.198994     19.899384       86.669555\n",
-       "Quite Strong             3487    0.083935      8.393510       95.063066\n",
-       "Very Light               1583    0.038104      3.810418       98.873484\n",
-       "Salvaged                  456    0.010976      1.097631       99.971115\n",
-       "NOt applicable             12    0.000289      0.028885      100.000000"
+       "                Type of Walls  Freq. Abs. Ac.  Freq. Rel.  Freq. Rel(%)  \\\n",
+       "Strong                  27739           27739    0.667702     66.770171   \n",
+       "Light                    8267           36006    0.198994     19.899384   \n",
+       "Quite Strong             3487           39493    0.083935      8.393510   \n",
+       "Very Light               1583           41076    0.038104      3.810418   \n",
+       "Salvaged                  456           41532    0.010976      1.097631   \n",
+       "NOt applicable             12           41544    0.000289      0.028885   \n",
+       "\n",
+       "                Freq. Rel. Ac.  \n",
+       "Strong               66.770171  \n",
+       "Light                86.669555  \n",
+       "Quite Strong         95.063066  \n",
+       "Very Light           98.873484  \n",
+       "Salvaged             99.971115  \n",
+       "NOt applicable      100.000000  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1908,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "2801c37f",
    "metadata": {},
    "outputs": [],
@@ -1918,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "8b7e42d6",
    "metadata": {},
    "outputs": [],
@@ -1946,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "e8ae69e1",
    "metadata": {},
    "outputs": [],
@@ -1956,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "e3b9d0f4",
    "metadata": {},
    "outputs": [],
@@ -1965,8 +1936,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "752d1d2c",
+   "metadata": {},
+   "source": [
+    "## 8"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "26526057",
    "metadata": {},
    "outputs": [
@@ -2420,7 +2399,7 @@
        "Household Head Class of Worker_Worked without p...         0.008664  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
