implments to_csv #6

--- a/projeto_pandas.ipynb
+++ b/projeto_pandas.ipynb
@@ -1898,6 +1898,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b90fb6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_dez_porcento.to_csv('./dez_porcento.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a00919c",
    "metadata": {},
