--- a/projeto_pandas.ipynb
+++ b/projeto_pandas.ipynb
@@ -6464,7 +6464,7 @@
    "id": "04ca114a",
    "metadata": {},
    "source": [
-    "##### Comparando as médias dos valores dos mais ricos (True) com o do restante do Dataframe (False)"
+    "##### Comparando as médias dos valores dos mais ricos (Richest 10%) com o do restante do Dataframe (Bottom 90%)"
    ]
   },
   {
@@ -6855,7 +6855,7 @@
     }
    ],
    "source": [
-    "df_final2.drop(columns=['ID']).groupby('Economic Classification').mean().round(2).T"
+    "Bottom 90%df_final2.drop(columns=['ID']).groupby('Economic Classification').mean().round(2).T"
    ]
   }
  ],
