Correção de um erro de digitação na última questão

--- a/projeto_pandas.ipynb
+++ b/projeto_pandas.ipynb
@@ -6855,7 +6855,7 @@
     }
    ],
    "source": [
-    "Bottom 90%df_final2.drop(columns=['ID']).groupby('Economic Classification').mean().round(2).T"
+    "df_final2.drop(columns=['ID']).groupby('Economic Classification').mean().round(2).T"
    ]
   }
  ],
